--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     --button-radius: 25px;
     --font-size-large: 2rem;
     --font-size-medium: 1rem;
-    --font-family: "Open Sans", sans-serif;
+    --font-family: "Figtree";
 }
 
 
@@ -70,7 +70,7 @@ ul, li {
     color: var(--primary-color);
     margin: 10px 0;
     text-align: center; /* Center align the date */
-    font-family: var(--font-family);
+    font-family: "Figtree";
 }
 
 .projects-header {
@@ -166,12 +166,13 @@ ul, li {
     align-items: center;
     background-color: var(--background-color);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 1rem; /* Adjust padding to avoid overflow */
+    padding: 1.5rem; /* Adjust padding to avoid overflow */
     font-size: var(--font-size-large);
     position: fixed; /* Fix navbar to the top */
     width: 100%; /* Full width */
     top: 0; /* Fix to top of viewport */
     z-index: 10; /* Keep it above other content */
+
 }
 
 /* Navbar Items */
@@ -272,6 +273,7 @@ ul, li {
     overflow: hidden;
     padding: 20px; /* Add padding */
     flex-wrap: wrap; 
+    margin-top: 0;
 }
 
 /* Container for the Hero Image */
@@ -298,7 +300,7 @@ ul, li {
     flex: 1; /* Allow this to grow */
     align-items: center;
     gap: 100px; /* Space between text and headshot */
-    max-width: 1200px;
+    max-width: 900px;
     padding: 20px;
     z-index: 1; /* Ensures the content is above the image */
     flex-direction: row; /* Keep text and headshot in a row for desktop */
@@ -334,6 +336,8 @@ ul, li {
     border: 4px solid #ffffff; /* White border around the headshot */
 }
 
+
+
 /* Responsive Styles */
 @media (max-width: 768px) {
     .hero-section {
@@ -351,8 +355,8 @@ ul, li {
     }
 
     .headshot-image {
-        width: 80px; /* Adjust size for mobile */
-        height: 80px; /* Maintain aspect ratio */
+        width: 200px; /* Adjust size for mobile */
+        height: 200px; /* Maintain aspect ratio */
         margin-top: 10px; /* Less space above headshot */
         margin-left: 0; /* Reset margin for mobile */
     }
@@ -366,6 +370,14 @@ ul, li {
 .projects h2, .portfolio h2, .about h2, .contact h2, .timeline h2, .cta h2 {
     text-align: center;
     margin-bottom: 2rem;
+    font-family: "Figtree" ;
+}
+
+
+.case-study-content h1, .case-study-content h2, .case-study-content h3{
+    
+    margin-bottom: 2rem;
+    font-family: "Figtree" ;
 }
 
 .project-grid {
@@ -387,6 +399,14 @@ ul, li {
     text-align: center;
 }
 
+.project h3 {
+    background-color: #ecf5fd;
+    
+    border-radius: 10px;
+    text-align: center;
+    font-family: "Figtree";
+}
+
 .project img {
     max-width: 100%;
     height: 400px;
@@ -395,10 +415,33 @@ ul, li {
 }
 
 /* About Section Styles */
-.about p {
-    text-align: center;
-    max-width: 800px;
-    margin: 0 auto;
+
+
+.about-content {
+    display: flex;          /* Use flexbox */
+  /* Align items vertically */
+  
+    text-align: left;
+    max-width: 900px;
+    margin: 3rem auto;
+}
+
+.about-text {
+    max-width: 700px;  
+    margin: 0 auto;    /* Optional: limit the width of the text container */
+}
+
+
+
+.headshot-image-about {
+    width:300px; /* Set size for headshot */
+    height: 300px; /* Set size for headshot */
+
+    border-radius: 10%; /* Makes the image circular */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Light shadow for depth */
+    object-fit: cover; /* Ensures the image fits inside the circle */
+    margin:  1rem 4rem;    /* Add some space between the image and text */
+   
 }
 
 /* Timeline Section Styles */
@@ -409,10 +452,11 @@ ul, li {
 }
 
 .timeline li {
-    background-color: #0d003a;
-    color:#e6eafa;
+    
+    color:#06185f;
+    border: 3px solid hsl(226, 84%, 12%);
     padding: 1rem;
-    border-radius: 10px;
+    border-radius:5px;
     margin-bottom: 1rem;
     list-style: none;
 }
@@ -525,7 +569,7 @@ ul, li {
 .main-image {
     width: 100%;
     height: auto;
-    max-width: 800px;
+    max-width: 700px;
     margin: 0 auto;
     display: block;
     border-radius: 10px;
@@ -534,12 +578,13 @@ ul, li {
 .case-study-title {
     font-size: 2.5rem;
     margin: 2rem auto;
-    max-width: 800px;
+    max-width: 700px;
+    font-family: "Figtree";
 }
 
 .case-study-content {
     text-align: left;
-    max-width: 800px;
+    max-width: 700px;
     margin: 2rem auto;
 }
 
@@ -553,6 +598,7 @@ ul, li {
     font-size:var(--font-size-medium);
     line-height: 1.6;
     margin-bottom: 1.5rem;
+    font-family: "Figtree";
 }
 .case-study-image {
     width: 100%;
